--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -19,8 +19,14 @@ ULAPLUS=TYPE1
 ; ZX-Evo Video DAC resolution: NONE, 3BIT, 4BIT, 5BIT
 TS_VDAC=5BIT
 
-; ZX-Evo Video DAC2 using FT812 (0 - disabled, 1 - enabled, 2 - VDAC2 + ESP32)
+; ZX-Evo Video DAC2 using FT812 (0 - disabled, 1 - enabled)
 TS_VDAC2=0
+
+; ZX-Evo ZiFi32 (ESP32 over SPI)
+;   NONE - no ZiFi32
+;   EMUL - software emulated
+;   USB - FT232H USB bridge to real ESP32 module
+TS_ZIFI32=EMUL
 
 ; OUT (C), 0 value
 OUT_C_0=0
@@ -364,7 +370,7 @@ Fq=44100        ; check maximum sampling rate in your soundcard manual
                 ; setting freq not supported by hardware
                 ; will cause resampling and degrade quality and performance
 
-GSType=BASS     ; BASS, Z80 or NONE
+GSType=Z80      ; BASS, Z80 or NONE
 GSReset=1       ; reinit GS on reset
 
 SD=1            ; enable/disable soundrive
@@ -983,6 +989,7 @@ MINUS=SYM J
 PLUS=SYM K
 COMMA=SYM N
 POINT=SYM M
+GRENTER=ENT
 ENTER=ENT
 SPACE=SPC
 LB=SYM 8
