--- a/pentevo/esp32/src/main/CMakeLists.txt
+++ b/pentevo/esp32/src/main/CMakeLists.txt
@@ -2,3 +2,4 @@ idf_component_register(SRCS "main.cpp" INCLUDE_DIRS ".")
 target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error)
 target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-missing-field-initializers)
 target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-but-set-variable)
+target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-function)
